--- a/model_bbox/resnet19ss2_Hybrid_woNoF/resnet19ss2_Hybrid_woNoF.ipynb
+++ b/model_bbox/resnet19ss2_Hybrid_woNoF/resnet19ss2_Hybrid_woNoF.ipynb
@@ -10,7 +10,28 @@
     "use centered data \n",
     "start lr 1e-3 ==> 1e-4\n",
     "weights.443-0.2379.hdf5\n",
-    "loss: 0.2740 - acc: 0.9540 - val_loss: 0.2379 - val_acc: 0.9339"
+    "loss: 0.2740 - acc: 0.9540 - val_loss: 0.2379 - val_acc: 0.9339\n",
+    "class\n",
+    "ALB      0.272034\n",
+    "BET      0.306000\n",
+    "DOL      0.474369\n",
+    "LAG      0.036428\n",
+    "OTHER    0.179511\n",
+    "SHARK    0.092447\n",
+    "YFT      0.152173\n",
+    "Name: logloss, dtype: float64\n",
+    "0.237888999605\n",
+    "\n",
+    "class\n",
+    "ALB      0.126435\n",
+    "BET      0.015934\n",
+    "DOL      0.000799\n",
+    "LAG      0.000494\n",
+    "OTHER    0.014901\n",
+    "SHARK    0.000971\n",
+    "YFT      0.057742\n",
+    "Name: logloss, dtype: float64\n",
+    "0.0855873399711"
    ]
   },
   {
