--- a/model_bbox/resnet19ss_Hybrid_woNoF/resnet19ss_Hybrid_woNoF.ipynb
+++ b/model_bbox/resnet19ss_Hybrid_woNoF/resnet19ss_Hybrid_woNoF.ipynb
@@ -2,16 +2,43 @@
  "cells": [
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "no centered data\n",
+    "no featurewise center\n",
     "weights.265-0.2277.hdf5\n",
-    "loss: 0.0857 - acc: 0.9866 - val_loss: 0.2277 - val_acc: 0.9416"
+    "28/28 [==============================] - 23s - loss: 0.0857 - acc: 0.9866 - val_loss: 0.2277 - val_acc: 0.9416\n",
+    "\n",
+    "valid loss: 0.229860134341\n",
+    "class\n",
+    "valid loss: 0.229860134341\n",
+    "class\n",
+    "ALB      0.167267\n",
+    "BET      0.692852\n",
+    "DOL      0.750891\n",
+    "LAG      0.208375\n",
+    "OTHER    0.096605\n",
+    "SHARK    0.266442\n",
+    "YFT      0.215996\n",
+    "Name: logloss, dtype: float64\n",
+    "\n",
+    "train loss: 0.0194088987134\n",
+    "class\n",
+    "ALB      0.026230\n",
+    "BET      0.003189\n",
+    "DOL      0.000596\n",
+    "LAG      0.000126\n",
+    "OTHER    0.001473\n",
+    "SHARK    0.000130\n",
+    "YFT      0.021688"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -54,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -131,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -187,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -198,8 +225,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating file data_train_224_224.pickle\n",
-      "Generating file data_valid_224_224.pickle\n",
+      "Loading from file data_train_224_224.pickle\n",
+      "Loading from file data_valid_224_224.pickle\n",
       "Loading data done.\n",
       "train sample  3584\n",
       "valid sample  787\n",
@@ -1825,7 +1852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1900,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1911,28 +1938,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "787/787 [==============================] - 4s      \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "787/787 [==============================] - 1s     \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "valid loss: 0.229860134341\n",
       "class\n",
-      "ALB      0.692852\n",
-      "BET      0.750891\n",
-      "DOL      0.208375\n",
-      "LAG      0.096605\n",
-      "NoF      0.167267\n",
-      "OTHER    0.266442\n",
-      "SHARK    0.215996\n",
+      "ALB      0.167267\n",
+      "BET      0.692852\n",
+      "DOL      0.750891\n",
+      "LAG      0.208375\n",
+      "OTHER    0.096605\n",
+      "SHARK    0.266442\n",
+      "YFT      0.215996\n",
       "Name: logloss, dtype: float64\n",
-      "0.229860135517\n",
       "3584/3584 [==============================] - 7s     \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+      "train loss: 0.0194088987134\n",
       "class\n",
-      "ALB      0.003189\n",
-      "BET      0.000596\n",
-      "DOL      0.000126\n",
-      "LAG      0.001473\n",
-      "NoF      0.026230\n",
-      "OTHER    0.000130\n",
-      "SHARK    0.021688\n",
-      "Name: logloss, dtype: float64\n",
-      "0.0194088987134\n"
+      "ALB      0.026230\n",
+      "BET      0.003189\n",
+      "DOL      0.000596\n",
+      "LAG      0.000126\n",
+      "OTHER    0.001473\n",
+      "SHARK    0.000130\n",
+      "YFT      0.021688\n",
+      "Name: logloss, dtype: float64\n"
      ]
     }
    ],
@@ -1945,11 +1972,11 @@
     "valid_logloss_df = pd.DataFrame(columns=['logloss','class'])\n",
     "for i in range(y_valid.shape[0]):\n",
     "    index = np.argmax(y_valid[i,:])\n",
-    "    fish = FISH_CLASSES[index]\n",
+    "    fish = CROP_CLASSES[index]\n",
     "    logloss = -math.log(valid_pred[i,index])\n",
     "    valid_logloss_df.loc[len(valid_logloss_df)]=[logloss,fish]                                       \n",
+    "print('valid loss:', valid_logloss_df['logloss'].mean())\n",
     "print(valid_logloss_df.groupby(['class'])['logloss'].mean())\n",
-    "print(valid_logloss_df['logloss'].mean())\n",
     "\n",
     "train_pred = test_model.predict(X_train, batch_size=BATCHSIZE, verbose=1)\n",
     "# train_pred = test_model.predict_generator(test_generator(df=train_df, ),\n",
@@ -1957,11 +1984,11 @@
     "train_logloss_df = pd.DataFrame(columns=['logloss','class'])\n",
     "for i in range(y_train.shape[0]):\n",
     "    index = np.argmax(y_train[i,:])\n",
-    "    fish = FISH_CLASSES[index]\n",
+    "    fish = CROP_CLASSES[index]\n",
     "    logloss = -math.log(train_pred[i,index])\n",
     "    train_logloss_df.loc[len(train_logloss_df)]=[logloss,fish]                                       \n",
-    "print(train_logloss_df.groupby(['class'])['logloss'].mean())\n",
-    "print(train_logloss_df['logloss'].mean())"
+    "print('train loss:', train_logloss_df['logloss'].mean())\n",
+    "print(train_logloss_df.groupby(['class'])['logloss'].mean())"
    ]
   },
   {
