--- a/resnet55ss4_Hybrid_woNoF/resnet55ss4_Hybrid_woNoF.ipynb
+++ b/resnet55ss4_Hybrid_woNoF/resnet55ss4_Hybrid_woNoF.ipynb
@@ -27,13 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os, random, glob, pickle, collections, math, json\n",
     "import numpy as np\n",
@@ -77,15 +85,15 @@
     "TEST_CROP_DIR = '../data/test_stg1_crop/'\n",
     "RFCN_MODEL = 'resnet101_rfcn_ohem_iter_30000'\n",
     "CROP_MODEL = 'resnet55ss4_Hybrid_woNoF'\n",
-    "if not os.path.exists('./' + CROP_MODEL):\n",
-    "    os.mkdir('./' + CROP_MODEL)\n",
-    "CHECKPOINT_DIR = './' + CROP_MODEL + '/checkpoint/'\n",
+    "if os.getcwd().split('/')[-1] != CROP_MODEL:\n",
+    "    print('WRONG CROP_MODEL DIR!!!')\n",
+    "CHECKPOINT_DIR = './checkpoint/'\n",
     "if not os.path.exists(CHECKPOINT_DIR):\n",
     "    os.mkdir(CHECKPOINT_DIR)\n",
-    "LOG_DIR = './' + CROP_MODEL + '/log/'\n",
+    "LOG_DIR = './log/'\n",
     "if not os.path.exists(LOG_DIR):\n",
     "    os.mkdir(LOG_DIR)\n",
-    "OUTPUT_DIR = './' + CROP_MODEL + '/output/'\n",
+    "OUTPUT_DIR = './output/'\n",
     "if not os.path.exists(OUTPUT_DIR):\n",
     "    os.mkdir(OUTPUT_DIR)\n",
     "FISH_CLASSES = ['NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
